<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        style="@style/RelativeLayout">
        <LinearLayout
           style="@style/LinearLayout"
           android:paddingBottom="@dimen/linear_layout_padding_bottom"
           android:paddingTop="@dimen/linear_layout_padding_top"
           android:paddingRight="@dimen/linear_layout_padding_right"
           android:paddingLeft="@dimen/linear_layout_padding_left"
           android:layout_marginBottom="@dimen/linear_layout_margin_bottom">
            <TextView
                style="@style/TextView1"
                android:layout_marginTop="@dimen/text_view1_margin_top" />
            <ImageView
                style="@style/ImageView"
                android:src="@drawable/pic1"
                android:layout_marginTop="@dimen/image_view_margin_top"
                android:layout_marginBottom="@dimen/image_view_margin_bottom"
                android:layout_height="@dimen/image_view_height"
            android:layout_width="@dimen/image_view_width" />

            <TextView
                android:text="@string/question1"
                android:id="@+id/question1"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:text="@string/answer1a"
                    android:id="@+id/answer1a"
                    style="@style/RadioButton"
                    android:paddingLeft="@dimen/radiobutton_padding_left"/>
                <RadioButton
                    android:text="@string/answer1b"
                    android:id="@+id/answer1b"
                    style="@style/RadioButton"
                    android:paddingLeft="@dimen/radiobutton_padding_left"/>
                <RadioButton
                    android:text="@string/answer1c"
                    android:id="@+id/answer1c"
                    style="@style/RadioButton"
                    android:paddingLeft="@dimen/radiobutton_padding_left"/>
            </RadioGroup>



            <TextView
                android:text="@string/question2"
                android:id="@+id/question2"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/answer2a"
                android:id="@+id/answer2a"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer2b"
                android:id="@+id/answer2b"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer2c"
                android:id="@+id/answer2c"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer2d"
                android:id="@+id/answer2d"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            </RadioGroup>

            <TextView
                android:text="@string/question3"
                android:id="@+id/question3"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/answer3a"
                android:id="@+id/answer3a"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer3b"
                android:id="@+id/answer3b"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer3c"
                android:id="@+id/answer3c"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer3d"
                android:id="@+id/answer3d"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            </RadioGroup>

            <TextView
                android:text="@string/question4"
                android:id="@+id/question4"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/answer4a"
                android:id="@+id/answer4a"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer4b"
                android:id="@+id/answer4b"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer4c"
                android:id="@+id/answer4c"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer4d"
                android:id="@+id/answer4d"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            </RadioGroup>

            <TextView
                android:text="@string/question5"
                android:id="@+id/question5"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/answer5a"
                android:id="@+id/answer5a"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer5b"
                android:id="@+id/answer5b"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer5c"
                android:id="@+id/answer5c"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            </RadioGroup>

            <TextView
                android:text="@string/question6"
                android:id="@+id/question6"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/answer6a"
                android:id="@+id/answer6a"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer6b"
                android:id="@+id/answer6b"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            </RadioGroup>


            <TextView
                android:text="@string/question7"
                android:id="@+id/question7"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/answer7a"
                android:id="@+id/answer7a"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer7b"
                android:id="@+id/answer7b"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            </RadioGroup>

            <TextView
                android:text="@string/question8"
                android:id="@+id/question8"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right"/>

            <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:text="@string/answer8a"
                android:id="@+id/answer8a"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer8b"
                android:id="@+id/answer8b"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer8c"
                android:id="@+id/answer8c"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <RadioButton
                android:text="@string/answer8d"
                android:id="@+id/answer8d"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            </RadioGroup>


            <TextView
                android:text="@string/question9"
                android:id="@+id/question9"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right"/>
            <CheckBox
                android:text="@string/answer9a"
                android:id="@+id/answer9a"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <CheckBox
                android:text="@string/answer9b"
                android:id="@+id/answer9b"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <CheckBox
                android:text="@string/answer9c"
                android:id="@+id/answer9c"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <CheckBox
                android:text="@string/answer9d"
                android:id="@+id/answer9d"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>
            <CheckBox
                android:text="@string/answer9e"
                android:id="@+id/answer9e"
                style="@style/RadioButton"
                android:paddingLeft="@dimen/radiobutton_padding_left"/>

            <TextView
                android:text="@string/question10"
                android:id="@+id/question10"
                style="@style/TextView2"
                android:layout_marginTop="@dimen/text_view2_margin_top"
                android:layout_marginBottom="@dimen/text_view2__margin_bottom"
                android:paddingLeft="@dimen/text_view2_padding_left"
                android:paddingRight="@dimen/text_view2_padding_right"/>

            <EditText
                android:id="@+id/answer10"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="submit"
                android:text="submit"
                android:id="@+id/submit"
                />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>